--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <header class="header page__header container">
     
       <div class="logo">
-        <a href="/" class="logo__content"><img src="./assets/img/logo.svg" alt="logo"></a>
+        <a href="/" class="logo__content"><img src="./assets/icon/logo.svg" alt="logo"></a>
       </div>
       <ul class="menu">
         <li class="menu__item">
