--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/libs/css/normalize.css">
   <link rel="stylesheet" href="./assets/libs/css/bootstrap.css">
   <link rel="stylesheet" href="./assets/libs/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/header.css">
     <title>Document</title>
 </head>
